Fix some bugs and layout issues on the new profile edition form

--- a/htdocs/css/default.css
+++ b/htdocs/css/default.css
@@ -86,6 +86,18 @@ p {
     background: inherit;
 }
 
+input.error, textarea.error {
+    background-color: #faa;
+}
+
+input.valid, textarea.valid {
+    background-color: #afa;
+}
+
+input.warning, textarea.warning {
+    background-color: #fda;
+}
+
 h1 {
     color: #555555;
     background: url('../images/skins/default_titre.gif');
